<?xml version="1.0"?>
<package>
  <name>pr2_gripper_traj_action</name>
  <version>0.0.1</version>
  <description>Gripper Trajectory Action Package</description>

  <maintainer email="hausmankarol@gmail.com">Karol Hausman</maintainer>

  <license>BSD</license>

  <author>ScottNiekum</author>


  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>python-catkin-pkg</buildtool_depend>


  <build_depend>message_generation</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>pr2_controllers_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>pr2_controllers_msgs</run_depend>

  <export>    
  </export>

</package>
